Squashed commit of the following:
commit adbccc1cefd7435e9ef5b2204fc6bd390011045a
Author: Alex Harsanyi <AlexHarsanyi@gmail.com>
Date:   Wed Sep 18 20:36:22 2019 +0800

    checkpoint

--- a/css/custom.css
+++ b/css/custom.css
@@ -103,3 +103,11 @@ article img {
 .gap-right {
     margin-right: 40px;
 }
+
+blockquote {
+    max-width: 90%;
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+}
