--- a/css/custom.css
+++ b/css/custom.css
@@ -111,3 +111,23 @@ blockquote {
     margin: 1.5em 10px;
     padding: 0.5em 10px;
 }
+
+.zoom-on-hover {
+    overflow: visible;
+}
+
+.zoom-on-hover img {
+    transition: all 0.2s ease;
+}
+
+.zoom-on-hover:hover img {
+    transform: scale(1.1);
+}
+
+.index-entry {
+    margin-top: 20px;
+}
+
+footer {
+    margin-top: 40px;
+}
