--- a/css/custom.css
+++ b/css/custom.css
@@ -41,8 +41,14 @@ a:hover {
 }
 
 body {
-    font-size: 16px;
+    font-size: 18px;
     font-family: Roboto,Georgia,"Times New Roman",Times,sans-serif;
+    color: #444444
+}
+
+.date-and-tags {
+    font-size: 14px;
+    color: #777777
 }
 
 /* When highlighted code blocks are too wide, they wrap. Resulting in the line
@@ -51,13 +57,14 @@ body {
 pre {
     white-space: pre;
     width: inherit;
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Roboto Mono',Menlo,Monaco,Consolas,Courier,monospace;
 }
 
 code {
     white-space: pre;
     width: inherit;
+    font-size: 16px;
     font-family: 'Roboto Mono',Menlo,Monaco,Consolas,Courier,monospace;
 }
 
